# telegrambot-ukranian

./: .gitignore  .hadolint.yml  .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml  makefile  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: latest.yaml  main.yml  pull-request.yml  stale_docker_images.yml  tagging.yaml
src/: app.ts  lib.rs  main.rs
src/middleware/: md_argsChecker.ts  md_argsJoiner.ts  md_commandsArgument.ts
src/services/4chan/: sv_4chan.ts
src/services/imageSearch/: sv_imageSearch.ts
src/services/openWeather/: sv_OpenWeather.ts
src/services/wikired/: sv_wikired.ts
src/utilities/: randomizer.ts
src/utils/: mod.rs  usernames.rs
src/weather/: mod.rs  openweather.rs  weather_model.rs
