[package]
name = "telegrambot_ukranian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.0"
