[package]
name = "telegrambot_ukranian"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Villanueva adrian.villanueva.martinez@outlook.com"]
description = "A private telegram bot"
repository = "https://github.com/adrianvillanueva997/telegrambot-ukranian"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.15.0", features = ["macros", "webhooks-axum"] }
serde = { version = "1.0.198", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
url = "2.5.0"

[profile.release]
lto = "fat"       # Link-time optimization
codegen-units = 1 # Optimize for size
opt-level = 3     # Maximum optimization
panic = "abort"   # Remove panic unwinding code
strip = true      # Remove debug symbols
debug = false     # No debug info

[profile.dev]
opt-level = 0 # No optimization for faster compilation
debug = true  # Full debug info

[profile.dev.package."*"]
opt-level = 2 # Better optimization for dependencies

[profile.test]
opt-level = 1 # Basic optimizations for tests
debug = true  # Keep debug info for tests
